[package]
name = "notificationcenter"
version = "0.1.0"
authors = ["avner <avner.barr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
crossbeam = "0.8.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
weak-self = "1.0.2"
actix = "0.10.0"
actix-rt = "1.1" # <-- Runtime for actix